--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 
 # Игнорировать Docker артефакты (если вдруг)
 *.log
+!log/log_format.log
 *.pid
 locales/ru_backup.json
 locales/en_backup.json
