--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ BOT_TOKEN=secret_bot_token # TelegramBot token from BotFather (required)
 BOT_USERNAME=username # (optional)
 
 FILENAME=filname # Filename of file with message text # (optional, defaut: `message.txt`)
+
+BUT_TEXT=btn1,btn2... # Buttons text seppareted with comma (optional)
+LINK=https://...,https://... # Buttons urls seppareted with comma (optional)
